# jadeitite_term

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt
examples/basic/src/: font8x8.h  main.c
src/: jadeitite_term.h
